Update name of course
Signed-off-by: Tanya Gray <tanyagray.nz@gmail.com>

--- a/_courses/taster/index.html
+++ b/_courses/taster/index.html
@@ -1,10 +1,10 @@
 ---
 layout: workshop
-title: Python Taster
+title: Arduino Taster
 course: taster
 
-heading: A Taste Of Python
-tagline: Complete some basic programming with Python
+heading: Arduino Taster
+tagline: Electronics basics with Arduino and NodeRed
 
 studentsurvey: https://gather.typeform.com/to/m3cJsR
 teachersurvey: https://gather.typeform.com/to/rLqMQK
