Updates to text content and images
Signed-off-by: Tanya Gray <Tanya@Wonkbook.local>

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ courses:
       published: false
 
     - name: taster
-      title: Taster Workshop
+      title: Half Day Workshop
       length: 2.5 hours
       description: Explore inputs and outputs
 
@@ -38,6 +38,7 @@ courses:
       title: NCEA Level Three
       length: 10 hours
       description: Coming soon
+      published: false
 ---
 
 <div class="container page-header">
